test/e2e/fixtures/dns-type-ttl-endpoint/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-type-ttl-endpoint-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dns-type-ttl-endpoint-echo
  template:
    metadata:
      labels:
        app: dns-type-ttl-endpoint-echo
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: dns-type-ttl-endpoint-echo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dns-type-ttl-endpoint-echo
spec:
  selector:
    app: dns-type-ttl-endpoint-echo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: getambassador.io/v3alpha1
kind: KubernetesEndpointResolver
metadata:
  name: dns-type-ttl-endpoint-resolver
spec:
  ambassador_id: [(env('SLOT'))]
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: dns-type-ttl-endpoint
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /dns-type-ttl-endpoint/
  service: dns-type-ttl-endpoint-echo:8080
  respect_dns_ttl: true
  resolver: dns-type-ttl-endpoint-resolver
